# open-greenhouse-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo_output.py  glama.json  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: advanced.md  api-reference.md  demo.cast  development.md  examples.md
docs/superpowers/plans/: 2026-04-13-greenhouse-mcp.md
docs/superpowers/specs/: 2026-04-13-greenhouse-mcp-design.md
src/greenhouse_mcp/: __init__.py  __main__.py  client.py  location.py  logging.py  permissions.py  resume_parser.py  server.py
src/greenhouse_mcp/harvest/: activity_feed.py  analytics.py  applications.py  approvals.py  attachments.py  batch.py  candidates.py  close_reasons.py  custom_fields.py  demographics.py  departments.py  education.py  eeoc.py  email_templates.py  hiring_team.py  interviews.py  job_openings.py  job_posts.py  job_stages.py  jobs.py  offers.py  offices.py  prospect_pools.py  rejection_reasons.py  scorecards.py  screening.py  search.py  sources.py  sourcing.py  tags.py  tracking_links.py  user_permissions.py  user_roles.py  users.py  workflows.py
src/greenhouse_mcp/ingestion/: candidates.py  jobs.py  prospects.py  retrieve.py  tracking.py  users.py
src/greenhouse_mcp/job_board/: applications.py  board.py  departments.py  educations.py  jobs.py  offices.py  prospects.py
src/greenhouse_mcp/webhook_receiver/: actions.py  models.py  receiver.py
src/greenhouse_mcp/webhook_tools/: events.py  rules.py  setup.py  testing.py
tests/: conftest.py  test_client.py  test_ingestion.py  test_job_board.py  test_job_scope.py  test_location.py  test_permissions.py  test_resume_parser.py  test_server.py  test_webhook_receiver.py  test_webhook_tools.py
tests/harvest/: test_applications.py  test_candidates.py  test_jobs.py  test_offers_interviews.py  test_screening.py  test_simple_modules.py  test_sourcing.py
