[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-greenhouse-mcp"
version = "0.3.1"
description = "Production-ready MCP server for Greenhouse, designed for recruiters and hiring teams"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ben Monopoli", email = "ben.monopoli@ahrefs.com"}
]
keywords = [
    "greenhouse",
    "mcp",
    "model-context-protocol",
    "recruiting",
    "ats",
    "api",
    "ai",
    "claude",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/benmonopoli/open-greenhouse-mcp"
Repository = "https://github.com/benmonopoli/open-greenhouse-mcp"
Issues = "https://github.com/benmonopoli/open-greenhouse-mcp/issues"
Discussions = "https://github.com/benmonopoli/open-greenhouse-mcp/discussions"
Changelog = "https://github.com/benmonopoli/open-greenhouse-mcp/blob/main/CHANGELOG.md"

[project.scripts]
open-greenhouse-mcp = "greenhouse_mcp.server:main"
open-greenhouse-mcp-receiver = "greenhouse_mcp.webhook_receiver.receiver:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
